# ELEANOR

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  LICENSE.txt  README.md  flake.nix  install.sh  pizzo_neuron_jax.py  polloop.ipynb  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml
SHD/: network.py  new_pizzo_neuron_jax.py
SRP/: acc_epoch_FELIF_output.npz  acc_epoch_LIF_output.npz  dataset.py  network.py  network_2.py  shd.py  shd_FELIF.py  shd_FELIF_2.py  shd_LIF.py  shd_LIF_2.py
docs/source/: conf.py  index.rst
docs/source/about/: citation.rst  copyright.rst
docs/source/api/: ELEANOR.rst  api.rst  model.rst  utils.rst  variability.rst
docs/source/examples/: examples.rst  heracles.ipynb  precision.ipynb  shd.ipynb  train.ipynb
docs/source/getting_started/: getting-start.rst  install.rst  usage.rst
docs/source/introduction/: introduction.rst
eleanor/: __init__.py  _version.py  datasets.py  learner.py  models.py  quantization.py  utils.py  variability.py  weight_quantization.py
eleanor/models/jax/: __init__.py  _bruno.py  _equinox.py  _felif.py  _heracles.py  _scaler.py  _surrogate.py  variability.py
eleanor/models/torch/: __init__.py  _bruno.py  _felif.py  _heracles.py  _surrogate.py  variability.py
eleanor/models/torch/csrc/: bruno.cpp  models.cpp
eleanor/models/torch/csrc/bruno/: bruno_cpu.cpp  bruno_cuda.cu
eleanor/models/torch/csrc/cuda/: bruno.cu
eleanor/models/torch/csrc/heracles/: heracles_cpu.cpp  heracles_cuda.cu
examples/: bruno.ipynb  felif.ipynb  heracles.ipynb
examples/models/: bruno.ipynb  felif.ipynb  heracles.ipynb
scripts/: WM.ipynb  braille.py  braille2.py  dataset.py  network.py  nni_experiment.yml  pizzo_neuron_jax.py  polloop.ipynb  quantization.ipynb  utils.py
scripts/benchmark/JSB/: datasets.py  experiment_eqx.py  models.py  utils.py
scripts/benchmark/JSB/bruno/FeLIF 0.0 - Reduce on plateau/: run.sh
scripts/benchmark/JSB/bruno/FeLIF 0.0 - Reduce on plateau (0.0005)/: run.sh
scripts/benchmark/JSB/bruno/FeLIF 0.0 - Reduce on plateau (0.005)/: events.out.tfevents.1763414104.c129720ba84e.1676800.0
scripts/benchmark/JSB/bruno/LIF - Reduce on plateau/: run.sh
scripts/benchmark/JSB/bruno/SNU - Reduce on plateau/: run.sh
scripts/benchmark/SHD/: shd.py  shd_train.ipynb
scripts/benchmark/Ying_Yang/: trainYY.ipynb
scripts/benchmark/braille/: braille.py  network.py  nni_experiment.yml  plotresults.ipynb  plotresultsQ.ipynb  quantization.ipynb  train.ipynb
scripts/benchmark/braille/results/: brailleAccFeLIF_Bruno.npy  brailleAccFeLIF_noBruno.npy  brailleLossFeLIF_Bruno.npy  brailleLossFeLIF_noBruno.npy
scripts/benchmark/federated/: dataset.py  federated.py
scripts/benchmark/optuna/: analysis.py  analysis_methods.py  analysis_paper.py  experiment.py  plotanalysis.ipynb  send_multi.sh
scripts/benchmark/optuna/results/3bit_FeLIF/: model.pkl  model_0.pkl  model_1.pkl  model_10.pkl  model_11.pkl  model_12.pkl  model_13.pkl  model_14.pkl  model_15.pkl  model_16.pkl  model_17.pkl  model_18.pkl  model_19.pkl  model_2.pkl  model_20.pkl  model_21.pkl  model_22.pkl  model_23.pkl  model_24.pkl  model_25.pkl  model_26.pkl  model_27.pkl  model_28.pkl  model_29.pkl  model_3.pkl  model_30.pkl  model_31.pkl  model_32.pkl  model_33.pkl  model_34.pkl  model_35.pkl  model_36.pkl  model_37.pkl  model_38.pkl  model_39.pkl  model_4.pkl  model_40.pkl  model_41.pkl  model_42.pkl  model_43.pkl  (+11 more)
scripts/benchmark/optuna/results/3bit_Heracles/: model.pkl
scripts/benchmark/optuna/results/3bit_LIF/: model.pkl
scripts/benchmark/optuna/results/3bit_RLIF/: model.pkl
scripts/benchmark/optuna/results/4bit_FeLIF/: model_0.pkl  model_1.pkl  model_10.pkl  model_11.pkl  model_12.pkl  model_13.pkl  model_14.pkl  model_15.pkl  model_16.pkl  model_17.pkl  model_18.pkl  model_19.pkl  model_2.pkl  model_20.pkl  model_21.pkl  model_22.pkl  model_23.pkl  model_24.pkl  model_25.pkl  model_26.pkl  model_27.pkl  model_28.pkl  model_29.pkl  model_3.pkl  model_30.pkl  model_31.pkl  model_32.pkl  model_33.pkl  model_34.pkl  model_35.pkl  model_36.pkl  model_37.pkl  model_38.pkl  model_39.pkl  model_4.pkl  model_40.pkl  model_41.pkl  model_42.pkl  model_43.pkl  model_44.pkl  (+10 more)
scripts/benchmark/optuna/results/4bit_Heracles/: model.pkl
scripts/benchmark/optuna/results/4bit_LIF/: model.pkl
scripts/benchmark/optuna/results/4bit_RLIF/: model.pkl
scripts/benchmark/optuna/results/8bit_FeLIF/: model_0.pkl  model_1.pkl  model_10.pkl  model_11.pkl  model_12.pkl  model_13.pkl  model_14.pkl  model_15.pkl  model_16.pkl  model_17.pkl  model_18.pkl  model_19.pkl  model_2.pkl  model_20.pkl  model_21.pkl  model_22.pkl  model_23.pkl  model_24.pkl  model_25.pkl  model_26.pkl  model_27.pkl  model_28.pkl  model_29.pkl  model_3.pkl  model_30.pkl  model_31.pkl  model_32.pkl  model_33.pkl  model_34.pkl  model_35.pkl  model_36.pkl  model_37.pkl  model_38.pkl  model_39.pkl  model_4.pkl  model_40.pkl  model_41.pkl  model_42.pkl  model_43.pkl  model_44.pkl  (+10 more)
scripts/benchmark/optuna/results/8bit_Heracles/: model.pkl
scripts/benchmark/optuna/results/8bit_LIF/: model.pkl
scripts/benchmark/optuna/results/8bit_RLIF/: model.pkl
scripts/benchmark/optuna/results/FPbit_FeLIF/: model_0.pkl  model_1.pkl  model_10.pkl  model_11.pkl  model_12.pkl  model_13.pkl  model_14.pkl  model_15.pkl  model_16.pkl  model_17.pkl  model_18.pkl  model_19.pkl  model_2.pkl  model_20.pkl  model_21.pkl  model_22.pkl  model_23.pkl  model_24.pkl  (+32 more)
scripts/benchmark/stats/: getstats.py  memory.py  merge.py  plot.ipynb  time.py
scripts/federated/: FL.py  FL_worker.py  dataset.py  models.py  optuna_driver.py
scripts/federated/tasks/: braille.py
test/: test_torchjax.py  torchjax.py
(+38 files in other folders)
