[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eleanor"
dynamic = ["version"]
dependencies = [
  "jax[cuda12]",
  "matplotlib",
  "seaborn",
  "pandas",
  "tqdm",
  "scikit-learn",
  "ipykernel",
  "ipywidgets",
  "orbax-checkpoint",
  "aqtp",
  "snnax@git+https://github.com/PGI15/snnax.git",
]
requires-python = ">= 3.10"
authors = [
  {name = "Fernando M. Quintana", email = "f.m.quintana.velazquez@rug.nl"},
  {name = "Luca Fehlings", email = "l.d.fehlings@rug.nl"},
  {name = "Pedro F. Ortiz Costa", email = "p.f.ortiz.costa@student.rug.nl"},
]
maintainers = [
  {name = "Fernando M. Quintana", email = "f.m.quintana.velazquez@rug.nl"}
]
description = ""
readme = "README.md"

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black[jupyter]",
  "isort",
  "flake8-black",
  "flake8-isort",
  "sphinx>=4.0",
  "sphinx-book-theme",
  "myst_nb",
]

[tool.hatch.version]
path = "eleanor/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "eleanor/",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
