[metadata]
name = eleanor
version = attr: eleanor.__version__
author = Fernando M. Quintana Velázquez, Luca Fehlings, Martin A. Nicholson, Pedro F. Ortiz Costa
author_email = f.m.quintana.velazquez@rug.nl, l.d.fehlings@rug.nl, m.a.nicholson@student.rug.nl, p.f.ortiz.costa@student.rug.nl
maintainer = Fernando M. Quintana Velázquez
maintainer_email = f.m.quintana.velazquez@rug.nl
description = Python package to simulate FeLIF neurons
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  Natural Language :: English
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Programming Language :: Python :: 3.11
  Operating System :: OS Independent
project_url =
  Homepage = https://www.rug.nl/research/zernike/bio-inspired-circuits-and-systems/covi-group/
  Documentation = https://readthedocs.org
  Repository = https://github.com/bics-rug/ELEANOR
  Issues = https://github.com/bics-rug/ELEANOR/issues

[options]
packages = find:
python_requires = >= 3.10
install_requires =
  jax
  matplotlib
  seaborn
  pandas
  tqdm
  scikit-learn
  ipykernel
  ipywidgets
  orbax-checkpoint
  aqtp
  snnax@git+https://github.com/PGI15/snnax.git

[options.extras_require]
cuda =
  jax[cuda12]
rocm =
  jax@git+https://github.com/ROCm/jax/archive/refs/tags/rocm-jaxlib-v0.4.30.tar.gz
dev =
  pre-commit
  black[jupyter]
  isort
  flake8-black
  flake8-isort
  sphinx>=4.0
  sphinx-book-theme
  myst_nb
